--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@fullcalendar/angular": "^6.0.3",
+    "@fullcalendar/core": "^6.0.3",
+    "@fullcalendar/daygrid": "^6.0.3",
+    "@fullcalendar/interaction": "^6.0.3",
     "ngx-mat-select-search": "^7.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
