--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,16 +14,23 @@ jobs:
 
     steps:
     
-    - name: Login to Docker Hub
-    - uses: docker/login-action@v2
-    - with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build ./backend/Dockerfile --file Dockerfile --tag matthiaswindisch/djangojam:v0.4
-      
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker push matthiaswindisch/djangojam:v0.4
+    -
+        name: Checkout
+        uses: actions/checkout@v3
+    -
+      name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    -
+      name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    -
+      name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ./backend/Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/djangojam:v0.4
